tests/NormalTests/paczka2/big_fuzzy/96609337.err
Error in line 7: s71MIXdMoxS A986 24,3
Error in line 14: r4Cwgr14 A986 100,80
Error in line 17: A542 A907 99,9
Error in line 12: r4Cwgr14 A986 50,1
Error in line 25: gWf52ed S158 73,0
Error in line 30: gWf52ed A907 19,1
Error in line 31: gWf52ed S158 45,7
Error in line 29: s71MIXdMoxS A542 66,9
Error in line 24: OLAAUNcr S158 384,2
Error in line 42: A542 S158 85,3
Error in line 68: RAfmcaNk9F A907 55,4
Error in line 77: gWf52ed A542 83,4
Error in line 64: s71MIXdMoxS A542 82,8
Error in line 79: gWf52ed S158 20,8
Error in line 82: s71MIXdMoxS A907 22,8
Error in line 99: RAfmcaNk9F A986 13,5
Error in line 107: A542 S158 48,0
Error in line 117: s71MIXdMoxS A986 10,4
Error in line 123: OLAAUNcr A542 23,3
Error in line 131: r4Cwgr14 S158 21,9
Error in line 102: gWf52ed A907 267,3
Error in line 152: uolAYDiCge A907 41,9
Error in line 174: A542 A907 34,4
Error in line 185: r4Cwgr14 S158 70,7
Error in line 184: RAfmcaNk9F S158 14,5
Error in line 210: uolAYDiCge A907 56,3
Error in line 215: A542 A542 57,8
Error in line 237: OLAAUNcr A986 2,06
Error in line 238: OLAAUNcr A986 -1,9
Error in line 232: uolAYDiCge A907 77,0
